// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnContainer renders the structure correctly 1`] = `
<DocumentFragment>
  <div
    class="th"
    data-column-id="0"
    role="columnheader"
    style="cursor: unset;"
    title="Column 1"
  >
    <div
      class="column-container"
      id="datagrid2_1:Datagrid@2-column0"
    >
      <div
        aria-label="Column 1"
        class="column-header align-column-left"
      >
        <span
          class="column-caption"
        >
          Column 1
        </span>
      </div>
      <div
        class="filter"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnContainer renders the structure correctly when draggable 1`] = `
<DocumentFragment>
  <div
    class="th"
    data-column-id="0"
    role="columnheader"
    style="cursor: unset;"
    title="Column 1"
  >
    <span
      class="drag-handle"
      draggable="true"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 64c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm128 0c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm-128 160c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm128 0c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm-128 160c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm128 0c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="column-container"
      id="datagrid2_1:Datagrid@14-column0"
    >
      <div
        aria-label="Column 1"
        class="column-header align-column-left"
      >
        <span
          class="column-caption"
        >
          Column 1
        </span>
      </div>
      <div
        class="filter"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnContainer renders the structure correctly when filterable with custom filter 1`] = `
<DocumentFragment>
  <div
    class="th"
    data-column-id="0"
    role="columnheader"
    style="cursor: unset;"
    title="Column 1"
  >
    <div
      class="column-container"
      id="datagrid2_1:Datagrid@18-column0"
    >
      <div
        aria-label="Column 1"
        class="column-header align-column-left"
      >
        <span
          class="column-caption"
        >
          Column 1
        </span>
      </div>
      <div
        class="filter"
      >
        <div>
          Custom filter
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnContainer renders the structure correctly when resizable 1`] = `
<DocumentFragment>
  <div
    class="th"
    data-column-id="0"
    role="columnheader"
    style="cursor: unset;"
    title="Column 1"
  >
    <div
      class="column-container"
      id="datagrid2_1:Datagrid@10-column0"
    >
      <div
        aria-label="Column 1"
        class="column-header align-column-left"
      >
        <span
          class="column-caption"
        >
          Column 1
        </span>
      </div>
      <div
        class="filter"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnContainer renders the structure correctly when sortable 1`] = `
<DocumentFragment>
  <div
    aria-sort="none"
    class="th"
    data-column-id="0"
    role="columnheader"
    title="Column 1"
  >
    <div
      class="column-container"
      id="datagrid2_1:Datagrid@6-column0"
    >
      <div
        aria-label="sort Column 1"
        class="column-header clickable align-column-left"
        role="button"
        tabindex="0"
      >
        <span
          class="column-caption"
        >
          Column 1
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrows-alt-v fa-w-8"
          data-icon="arrows-alt-v"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="filter"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnContainer renders the structure correctly when value is empty 1`] = `
<DocumentFragment>
  <div
    class="th"
    data-column-id="0"
    role="columnheader"
    style="cursor: unset;"
    title=""
  >
    <div
      class="column-container"
      id="datagrid2_1:Datagrid@26-column0"
    >
      <div
        aria-label=""
        class="column-header align-column-left"
      >
        <span
          class="column-caption"
        >
           
        </span>
      </div>
      <div
        class="filter"
      />
    </div>
  </div>
</DocumentFragment>
`;
